# API-Nomades

./: .env  .env.example  .gitignore  CNAME  Dockerfile  Makefile  README.md  alembic.ini  code_commit  code_commit.pub  console  daemon.json  docker-compose.yml  main.py  main.py~  nomades.service.example  organize.sh  pyproject.toml  requirements.txt  vercel.json  verify.sh
.github/workflows/: main.yml  nomades.service  tests.yml
alembic/: env.py
alembic/versions/: 2f445e1603a3_add_src_profile_in_user.py  4755177ab035_user_active_or_inactive.py  6c00034207c8_modify_to_declarative_mode_sqlalchemy.py  6d7aed53b08e_modify_permission_enum.py  80c007348819_all_tables_in_alembic.py  98710f217ba7_modify_to_declarative_mode_sqlalchemy.py  b8f3391d1c3f_create_bio_info_on_user.py  ed0ecd4b4cd4_string_big.py
app/: uow.py
app/auth/: controllers.py  entities.py  exceptions.py  hasher.py  orm.py  repositories.py  schemas.py  services.py  value_object.py
app/band/: controllers.py  entities.py  models.py  orm.py  repositories.py  services.py
app/breakdown/: controllers.py  entities.py  exceptions.py  models.py  orm.py  repositories.py  services.py
app/kibon_donjak/: controllers.py  entities.py  models.py  orm.py  repositories.py  services.py
app/kick/: controllers.py  entities.py  models.py  orm.py  repositories.py  services.py
app/poomsae/: controllers.py  entities.py  models.py  orm.py  repositories.py  services.py
app/stretching/: controllers.py  entities.py  models.py  orm.py  repositories.py  services.py
app/theory/: controllers.py  entities.py  models.py  orm.py  repositories.py  services.py
app/user/: controllers.py  entities.py  exceptions.py  models.py  orm.py  repositories.py  services.py
app/utils/: Logs.py  create_controller.py  delete_controller.py  get_all_controller.py  get_by_controller.py  get_by_id_controller.py  get_controller.py  log.py  update_controller.py
app/utils/controllers/: create_controller.py  delete_controller.py  get_by_controller.py  get_controller.py  update_controller.py
bootstrap/: database.py  server.py
general_enum/: ModuleType.py  difficulty.py  hubs.py  permissions.py
infra/: Dockerfile  docker-compose.yml
ports/: entity.py  exceptions.py  repository.py  uow.py
tests/: conftest.py  main.py  utils.py
tests/auth/: controller.py  test_controller.py
tests/band/: controller.py  test_controllers.py  test_services.py
tests/kibon_donjaks/: test_controller.py
tests/kicks/: test_controller.py
tests/poomsaes/: test_controller.py  test_controllers.py
tests/theory/: controller.py
