[tool.poetry]
name = "api-nomades"
version = "0.1.0"
description = ""
authors = ["FelipePy <felipespsampaiomotasp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.1.2"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.105.0"
email-validator = "^2.1.0.post1"
uvicorn = "^0.24.0.post1"
aiocron = "^1.8"
python-jose = "^3.3.0"
loguru = "^0.7.2"
requests = "^2.31.0"
pytest = "^7.4.4"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
package-mode = false
build-backend = "poetry.core.masonry.api"
